--- a/ColoradoWaters/res/layout-land/fragment_station_details.xml
+++ b/ColoradoWaters/res/layout-land/fragment_station_details.xml
@@ -25,30 +25,39 @@
 			android:paddingBottom="8dp"
 			android:orientation="vertical"
 		>
-			<TextView
-				android:id="@+id/title_view"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:paddingLeft="16dp"
-				style="@style/StationDetailTitle.CW"
-				android:fontFamily="sans-serif-light"
-				android:text="Bijou Canal @ 20 Ft Parshall Flume"
-			/>
-			
-			<TextView
-				android:id="@+id/provider_view"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:paddingLeft="16dp"
-				style="@style/StationProviderTitle.CW"
-				android:text="Co. Division of Water Resources"
-			/>
 			<RelativeLayout
 				android:id="@+id/chart_container"
 				android:layout_width="match_parent"
 				android:layout_height="0dp"
 				android:layout_weight="1"
 			>
+				<RadioGroup
+					android:id="@+id/chart_filter_container"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginLeft="8dp"
+					android:layout_marginRight="8dp"
+					android:orientation="horizontal"
+				>
+					<RadioButton
+						android:id="@+id/button_day"
+						android:text="1d"
+						style="@style/StationChartFilterToggle.CW"
+						android:checked="true"
+					/>
+					
+					<RadioButton
+						android:id="@+id/button_week"
+						android:text="1w"
+						style="@style/StationChartFilterToggle.CW"
+					/>
+					
+					<RadioButton
+						android:id="@+id/button_month"
+						android:text="1m"
+						style="@style/StationChartFilterToggle.CW"
+					/>
+				</RadioGroup>
 				<com.michaelpardo.android.widget.chartview.ChartView
 					android:id="@+id/chart_view"
 					android:layout_width="match_parent"
@@ -60,6 +69,7 @@
 					chartview:gridLinesHorizontal="6"
 					chartview:gridLinesVertical="3"
 					chartview:leftLabelWidth="38dp"
+					android:layout_below="@id/chart_filter_container"
 				/>
 				
 				<ProgressBar
@@ -82,6 +92,7 @@
 				android:id="@+id/chart_variable"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				android:layout_marginBottom="16dp"
 				android:textSize="12sp"
 				android:gravity="center"
 			/>
