--- a/ColoradoWaters/res/layout/view_current_condition.xml
+++ b/ColoradoWaters/res/layout/view_current_condition.xml
@@ -2,10 +2,13 @@
 <LinearLayout 
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
 	android:paddingTop="12dp"
 	android:paddingBottom="12dp"
+	android:paddingLeft="8dp"
+	android:paddingRight="8dp"
 	android:orientation="horizontal"
+	android:background="@drawable/card_background"
 >
 	<TextView
 		android:id="@+id/condition_label"
